5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2507.log
== TEST (2019-05-15 01:55:49) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cres)	 
	ret=int(float("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
	print (cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pira = pira + (pira*cres)	 
NameError: name 'cres' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:56:37) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)	 
	ret=int(float("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
	print (cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ret=int(float("retirada mensal: "))
ValueError: could not convert string to float: 'retirada mensal: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:57:22) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(float("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
	print (cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ret=int(float("retirada mensal: "))
ValueError: could not convert string to float: 'retirada mensal: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:57:45) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
	print (cont)
-- OUTPUT:
MAXIMO
1
MAXIMO
2
MAXIMO
3
MAXIMO
4
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:58:35) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:59:26) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira==0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
print (cont)
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:00:27) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira=>0 and pira<=8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira<=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
print (cont)
-- ERROR:
File "XXXX", line 4
    while(pira=>0 and pira<=8000):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:00:42) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>=0 and pira<=8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira<=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
print (cont)
-- OUTPUT:
MAXIMO
MAXIMO
MAXIMO
MAXIMO
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:01:36) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>=0 and pira<=8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
	print (mensagem)
print (cont)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:01:43) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>=0 and pira<=8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:02:09) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>=0 and pira<=8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- EXECUTION TIME:
0.184272
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:02:53) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:03:14) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:03:44) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:04:28) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira<=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:05:07) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>=0):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 02:06:45) 
-- CODE:
pira = int(input("qtde. inicial: "))
cresc = int(input("crescimento: "))/100
cont = 0
while(pira>0 and pira<8000):
	pira = pira + (pira*cresc)
	ret=int(input("retirada mensal: "))
	if(pira>=0 and pira<=8000):
		pira = pira - ret
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	cont = cont + 1
print (mensagem)
print (cont)
-- EXECUTION TIME:
0.198055
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
